refactored Inventory, updated tests